# vvctre

./: .gitignore  .gitmodules  CMakeLists.txt  plugin-server.js
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: button-to-touch-plugin-request.md  custom-default-settings-plugin-request.md  window-position-plugin-request.md  window-size-plugin-request.md
.github/scripts/: button-to-touch-plugin-request.js  custom-default-settings-plugin-request-before-making-plugin.js  custom-default-settings-plugin-request-make-plugin.js  custom-default-settings-plugin-request-remove-useless-lines.js  custom-default-settings-plugin-request.js  window-position-plugin-request.js  window-size-plugin-request.js
.github/scripts/bot-that-makes-plugins/: button-to-touch.js  custom-default-settings.js  log-file.js  main.js  window-position.js  window-size.js
.github/scripts/common/: custom-default-settings-plugin-request-regexes.js  regexes.js
.github/workflows/: bot-that-makes-plugins.yml  build.yml  button-to-touch-plugin-request.yml  custom-default-settings-plugin-request.yml  discord-bot-that-makes-plugins.yml  github-bot-that-makes-plugins.yml  website.yml  window-position-plugin-request.yml  window-size-plugin-request.yml
gh-pages/: dumping-guides.md  faq.md  plugin-maker-custom-default-settings-line-examples.md  plugins.md  requirements.md
gh-pages/_includes/plugin-maker/: code-and-builds-no-account.html  code-and-builds-user-github-account.html  code-only.html
gh-pages/_layouts/: default.html
gh-pages/plugin-maker/: code-and-builds-no-account.js  code-and-builds-no-account.md  code-and-builds-user-github-account.js  code-only.js  custom-default-settings-regexes-and-functions.js  custom-default-settings-regexes.js  custom-default-settings.js
src/: CMakeLists.txt
src/audio_core/: CMakeLists.txt  codec.h  cubeb_input.cpp  cubeb_sink.cpp  dsp_interface.cpp  dsp_interface.h  sdl2_input.cpp  sdl2_input.h  sdl2_sink.cpp  time_stretch.cpp
src/audio_core/hle/: decoder.cpp  decoder.h  fdk_decoder.cpp  filter.cpp  filter.h  source.cpp  source.h  wmf_decoder.cpp  wmf_decoder_utils.cpp  wmf_decoder_utils.h
src/audio_core/lle/: lle.cpp
src/common/: CMakeLists.txt  assert.h  bit_set.h  cityhash.cpp  cityhash.h  color.h  common_funcs.h  common_types.h  fastmem_mapper_posix.cpp  file_util.cpp  file_util.h  math_util.h  misc.cpp  string_util.cpp  string_util.h  swap.h  thread.h
src/common/logging/: backend.cpp  backend.h  filter.cpp  filter.h  log.h  text_formatter.cpp  text_formatter.h
src/common/x64/: cpu_detect.cpp  cpu_detect.h  xbyak_abi.h  xbyak_util.h
src/core/: CMakeLists.txt  core.cpp  core.h  core_timing.cpp  core_timing.h  custom_tex_cache.cpp  custom_tex_cache.h  memory.cpp  memory.h  movie.cpp  movie.h  perf_stats.cpp  perf_stats.h  settings.cpp  settings.h
src/core/arm/: arm_dynarmic.cpp  arm_dynarmic.h  arm_dynarmic_cp15.cpp  arm_interface.h
src/core/cheats/: cheat.cpp  cheat.h  cheats.cpp  cheats.h  engine.cpp  engine.h  gateway_cheat.cpp  gateway_cheat.h
src/core/file_sys/: archive_backend.h  archive_extsavedata.cpp  archive_extsavedata.h  archive_ncch.cpp  archive_ncch.h  archive_other_savedata.cpp  archive_other_savedata.h  archive_savedata.cpp  archive_savedata.h  archive_sdmc.cpp  archive_sdmc.h  archive_sdmcwriteonly.cpp  archive_sdmcwriteonly.h  archive_selfncch.cpp  archive_selfncch.h  archive_source_sd_savedata.cpp  archive_source_sd_savedata.h  archive_systemsavedata.cpp  archive_systemsavedata.h  cia_container.cpp  cia_container.h  directory_backend.h  disk_archive.cpp  errors.h  file_backend.h  ivfc_archive.cpp  ivfc_archive.h  layered_fs.h  (+8 more)
src/input_common/: main.cpp  main.h
src/network/: CMakeLists.txt  common.h  network.cpp  network.h  packet.h  room.cpp  room.h  room_member.cpp  room_member.h
src/video_core/: CMakeLists.txt  command_processor.cpp  geometry_pipeline.cpp  geometry_pipeline.h  pica.cpp  rasterizer_interface.h  renderer_base.cpp  renderer_base.h  vertex_loader.cpp  video_core.cpp  video_core.h
src/video_core/renderer/: format_reinterpreter.cpp  format_reinterpreter.h  post_processing.cpp  rasterizer.cpp  rasterizer.h  rasterizer_cache.cpp  rasterizer_cache.h  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  shader_decompiler.cpp  shader_disk_cache.cpp  shader_disk_cache.h  shader_gen.cpp  shader_gen.h  shader_manager.cpp  shader_manager.h  shader_util.cpp  state.cpp  stream_buffer.cpp  stream_buffer.h  surface_params.cpp
src/video_core/renderer/texture_filters/: anime4k_ultrafast.cpp  anime4k_ultrafast.h  bicubic.cpp  bicubic.h  scale_force.cpp  scale_force.h  texture_filter_base.h  texture_filterer.cpp  texture_filterer.h  xbrz_freescale.cpp  xbrz_freescale.h
src/video_core/renderer_opengl/: gl_format_reinterpreter.h  gl_rasterizer.cpp  gl_rasterizer.h  gl_rasterizer_cache.cpp  gl_rasterizer_cache.h  gl_resource_manager.cpp  gl_resource_manager.h  gl_shader_decompiler.cpp  gl_shader_disk_cache.cpp  gl_shader_disk_cache.h  gl_shader_gen.cpp  gl_shader_gen.h  gl_shader_manager.cpp  gl_shader_manager.h  gl_shader_util.cpp  gl_shader_util.h  gl_stream_buffer.h  gl_surface_params.h  post_processing_opengl.cpp  post_processing_opengl.h  renderer_opengl.cpp
src/video_core/renderer_opengl/texture_filters/: texture_filterer.cpp  texture_filterer.h
src/video_core/shader/: compiler.cpp  compiler.h  engine.cpp  engine.h  shader.cpp  shader.h  shader_interpreter.cpp  shader_jit_x64_compiler.h
src/video_core/swrasterizer/: clipper.cpp  rasterizer.cpp
src/video_core/texture/: texture_decode.cpp  texture_decode.h
src/vvctre/: CMakeLists.txt  common.cpp  common.h  function_logger.cpp  function_logger.h  initial_settings.cpp  initial_settings.h  plugins.cpp  plugins.h  vvctre.cpp  vvctre.rc
website/: _config.yml  dumping-guides.md  faq.md  hidden-features.md  plugin-maker-custom-default-settings-line-examples.md  plugins.md
website/_layouts/: default.html
website/plugin-maker/: code-and-builds-no-account.js  code-and-builds-no-account.md  code-and-builds-user-github-account.md  code-only.js  code-only.md
(+160 files in other folders)
